# WelderEngineRevamp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  dockerbuild.sh  dockerbuildserver.sh  index.html  index.js  package-lock.json  package.json  suppress.txt  zero.sh
Code/Libraries/Extensions/TBUI/: CMakeLists.txt  (+17 more)
Code/Libraries/Renderer/: CMakeLists.txt
Libraries/: CMakeLists.txt
Libraries/Common/: CMakeLists.txt  CommonStandard.hpp  MainLoop.hpp  Platform.hpp
Libraries/Common/Lexer/: Lexer.inl
Libraries/Common/Math/: Reals.cpp
Libraries/Content/: CMakeLists.txt  ContentStandard.hpp
Libraries/Core/: CMakeLists.txt
Libraries/Core/Engine/: Archetype.cpp  AsyncProcess.cpp  CMakeLists.txt  Component.cpp  Component.hpp  Engine.cpp  EngineStandard.hpp  HeightMap.cpp  Project.cpp
Libraries/Core/Image/: CMakeLists.txt  HdrSupport.hpp  ImageStandard.hpp  ImageSupport.cpp  ImageSupport.hpp  PngSupport.hpp
Libraries/Editor/: CMakeLists.txt
Libraries/Engine/: CMakeLists.txt  Documentation.cpp  EngineStandard.hpp
Libraries/Extensions/CodeTranslator/: CMakeLists.txt
Libraries/Extensions/DearImgui/: CMakeLists.txt  DearImgui.cpp  DearImgui.hpp  DearImguiStandard.cpp  DearImguiStandard.hpp
Libraries/Extensions/Editor/: CMakeLists.txt  ColorScheme.cpp  ContentLogic.cpp  Editor.cpp  EditorCameraController.hpp  EditorGraphs.cpp  EditorProject.cpp  EditorStandard.hpp  ExtraWidgets.cpp  StressTest.cpp
Libraries/Extensions/Gameplay/: CMakeLists.txt  EmscriptenExportTarget.cpp  Exporter.cpp  GameplayStandard.hpp  Importer.cpp
Libraries/Extensions/UiWidget/: CMakeLists.txt
Libraries/Extensions/Widget/: CMakeLists.txt  Widget.cpp  Widget.hpp
Libraries/Extensions/ZilchScript/: CMakeLists.txt  ZilchScript.cpp
Libraries/Extensions/ZilchShaders/: CMakeLists.txt  ShaderByteStream.hpp
Libraries/Foundation/: CMakeLists.txt
Libraries/Foundation/Common/: BuildVersion.cpp  CommonStandard.hpp
Libraries/Foundation/Geometry/: GeometryStandard.hpp  LineTests.cpp  RayTests.cpp
Libraries/Foundation/Meta/: CMakeLists.txt  Event.hpp  HandleManagers.hpp  MetaMath.hpp  MetaStandard.hpp  Object.cpp  ThreadSafeReferenceCounted.hpp
Libraries/Foundation/Platform/: CMakeLists.txt
Libraries/Foundation/Replication/: CMakeLists.txt  ReplicationStandard.hpp
Libraries/Foundation/Serialization/: Binary.hpp  CMakeLists.txt  DataTree.cpp  DataTree.hpp  MathSerialization.hpp  MetaSerialization.cpp  Serialization.cpp  Serialization.hpp  SerializationStandard.hpp  Text.cpp  Text.hpp
Libraries/Foundation/SpatialPartition/: BroadPhaseRanges.hpp  CMakeLists.txt
Libraries/Foundation/Support/: Archive.cpp  Archive.hpp  CMakeLists.txt  ChunkWriter.hpp  FileSupport.cpp  FileSupport.hpp  SupportStandard.hpp
Libraries/Foundation/Zilch/: Any.hpp  Base64.hpp  Binding.hpp  CMakeLists.txt  CodeGenerator.cpp  ConsoleClass.cpp  ConsoleClass.hpp  ConstructorBinding.inl  Core.cpp  Debugging.cpp  DestructibleBuffer.cpp  DestructibleBuffer.hpp  ExecutableState.cpp  ExecutableState.hpp  Formatter.cpp  Handle.hpp  HandleManager.cpp  HandleManager.hpp  HashContainer.cpp  Matrix.cpp  Plugin.cpp  Precompiled.hpp  Project.cpp  Sha1.cpp  Sha1.hpp  StreamInterface.cpp  StringBuilderClass.hpp  TemplateBinding.hpp  Type.hpp  UntypedBlockArray.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMethodBinding.inl  WebSocket.cpp  Wrapper.cpp
Libraries/Gameplay/: CMakeLists.txt  Exporter.cpp  GameplayStandard.hpp  Importer.cpp  Importer.hpp  WindowsExportTarget.cpp
Libraries/Graphics/: CMakeLists.txt  GraphicsStandard.hpp
Libraries/Image/: CMakeLists.txt  ImageStandard.hpp
Libraries/Networking/: CMakeLists.txt  NetworkingStandard.hpp
Libraries/Physics/: CMakeLists.txt
Libraries/Platform/Empty/: MainLoop.cpp
Libraries/Platform/Emscripten/: MainLoop.cpp  Precompiled.cpp
Libraries/Platform/Posix/: Socket.cpp
Libraries/Platform/SDLSTDEmpty/: Platform.cmake  Precompiled.hpp
Libraries/Platform/Stub/: Precompiled.hpp
Libraries/Platform/Windows/: Precompiled.hpp  Shell.cpp
Libraries/Projects/Startup/: CMakeLists.txt
Libraries/Projects/WelderEditor/: CMakeLists.txt  GameOrEditorStartup.cpp
Libraries/Projects/WelderLauncher/: CMakeLists.txt  LauncherStartup.cpp  LauncherTasks.cpp  Standalone.cpp  TagFiltering.hpp  VersionSelector.cpp
Libraries/Renderer/: CMakeLists.txt
Libraries/Renderer/RendererBase/: CMakeLists.txt  Renderer.hpp
Libraries/Renderer/RendererEmpty/: CMakeLists.txt
Libraries/Renderer/RendererGL/: CMakeLists.txt  OpenglRenderer.cpp  Precompiled.hpp  RendererGLStandard.cpp  RendererGLStandard.hpp
Libraries/Sound/: CMakeLists.txt
Libraries/Startup/: CMakeLists.txt  Startup.cpp
Libraries/Support/: CMakeLists.txt  SupportStandard.hpp
Libraries/Systems/Content/: AudioFileEncoder.hpp  CMakeLists.txt  CubemapProcessing.cpp  CubemapProcessing.hpp  MeshBuilder.cpp  SpriteBuilder.cpp  TextureImporter.hpp  TextureProcessor.cpp  VertexDescriptionBuilder.hpp  ZilchPluginContent.cpp
Libraries/Systems/Graphics/: Atlas.cpp  CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsRaycastProvider.cpp  Mesh.cpp  Mesh.hpp  RenderTasks.cpp  Texture.hpp  TextureData.hpp
Libraries/Systems/Networking/: TcpSocket.cpp  TcpSocket.hpp  WebRequester.cpp  WebRequester.hpp  WebServer.cpp  WebServer.hpp
Libraries/Systems/Physics/: BasicActions.cpp  CMakeLists.txt  ConstraintMolecules.cpp  CoreActions.cpp  CoreActions.hpp  JointCreator.cpp  PhysicsRaycastProvider.cpp  PhysicsSolverConfig.cpp  PhysicsSolverConfig.hpp  PhysicsStandard.cpp
Libraries/Systems/Sound/: CustomAudioNode.cpp  CustomAudioNode.hpp  FileDecoder.cpp  Recording.cpp  Sound.cpp  SoundAsset.cpp  SoundAsset.hpp  SoundCue.cpp  SoundStandard.hpp  SoundSystem.hpp  SoundTag.cpp
Libraries/Tools/: CMakeLists.txt
Libraries/Tools/SelfExtractor/: Main.cpp
Libraries/WelderEditor/: CMakeLists.txt
Libraries/WelderLauncher/: CMakeLists.txt  VersionSelector.cpp
Libraries/Zilch/: Precompiled.hpp  StreamInterface.cpp  Type.cpp  WebSocket.cpp
Libraries/ZilchScript/: CMakeLists.txt
(+588 files in other folders)
