# Libraries.
add_subdirectory(CodeTranslator)
add_subdirectory(Foundation)
add_subdirectory(Renderer)
add_subdirectory(Image)
add_subdirectory(Content)
add_subdirectory(Editor)
add_subdirectory(Engine)
add_subdirectory(Gameplay)
add_subdirectory(Graphics)
add_subdirectory(Networking)
add_subdirectory(Physics)
add_subdirectory(Sound)
add_subdirectory(Startup)
add_subdirectory(UiWidget)
add_subdirectory(Widget)
add_subdirectory(ZilchScript)
add_subdirectory(ZilchShaders)

# Executables.
add_subdirectory(WelderEditor)
add_subdirectory(WelderLauncher)
#add_subdirectory(WelderLauncherShell)
