# Libraries.
add_subdirectory(CodeTranslator)
add_subdirectory(Foundation)
add_subdirectory(Renderer)
add_subdirectory(Image)
add_subdirectory(Editor)
add_subdirectory(Engine)
add_subdirectory(Gameplay)
add_subdirectory(Systems)
add_subdirectory(Startup)
add_subdirectory(UiWidget)
add_subdirectory(Widget)
add_subdirectory(ZilchScript)
add_subdirectory(ZilchShaders)

# Executables.
add_subdirectory(WelderEditor)
add_subdirectory(WelderLauncher)
#add_subdirectory(WelderLauncherShell)
