# Libraries.
add_subdirectory(Foundation)
add_subdirectory(Renderer)
add_subdirectory(Image)
add_subdirectory(Engine)
add_subdirectory(Systems)
add_subdirectory(Extensions)
add_subdirectory(Startup)

# Executables.
add_subdirectory(WelderEditor)
add_subdirectory(WelderLauncher)
#add_subdirectory(WelderLauncherShell)
