add_library(Content)

welder_setup_library(Content ${CMAKE_CURRENT_LIST_DIR} TRUE)
welder_use_precompiled_header(Content ${CMAKE_CURRENT_LIST_DIR})

target_sources(Content
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/AnimationProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AnimationProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioFileEncoder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AudioFileEncoder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentEnumerations.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentStandard.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ContentStandard.hpp
    ${CMAKE_CURRENT_LIST_DIR}/CubemapProcessing.cpp
    ${CMAKE_CURRENT_LIST_DIR}/CubemapProcessing.hpp
    ${CMAKE_CURRENT_LIST_DIR}/FileExtensionManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/FileExtensionManager.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryImporter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryImporter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryProcessorDataStructures.hpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryUtility.cpp
    ${CMAKE_CURRENT_LIST_DIR}/GeometryUtility.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ImageContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ImageContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ImportOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ImportOptions.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/MeshProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PhysicsMeshProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PhysicsMeshProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/PivotProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/PivotProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Precompiled.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SkeletonProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SkeletonProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/SpriteBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/SpriteBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureImporter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureImporter.hpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureProcessor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/TextureProcessor.hpp
    ${CMAKE_CURRENT_LIST_DIR}/VertexDescriptionBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/VertexDescriptionBuilder.hpp
    ${CMAKE_CURRENT_LIST_DIR}/ZilchPluginContent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ZilchPluginContent.hpp
    ${CMAKE_CURRENT_LIST_DIR}/stb_vorbis.cpp
    ${CMAKE_CURRENT_LIST_DIR}/stb_vorbis.h
)

target_link_libraries(Content
  PUBLIC
    Common
    Image
    Meta
    Platform
    RendererBase
    Serialization
    Engine
    Zilch
    Assimp
    ZLib
    Opus
    Nvtt
)

target_include_directories(Content
  PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/../../Core/
)
